* new config.NoOptionWarning when undefined options are used (with
  default None) and POWConfigParser.get() now logs when an option is used
  at level DEBUG (PR #187)
* new Ensemble and EnsembleAtomGroup objects for loading set of system
  simulations (issue #168, PR #179)
* new EnsembleAnalysis framework for collecting data from MDPOW simulations 
  (issue #168, PR #179)


Fixes

* run.get_mdp_files() finds the full path for an MDP file and raises ValueError
  when MDP file is not found (PR #187)
* POWConfigParser.getpath() returns None for empty options instead of raising
  TypeError (PR #187)
* POWConfigParser.getlist() and getarray() return empty list or array for
  empty options instead of raising TypeError (PR #187)


2021-08-04    0.7.1
orbeckst, iorga

Fixes

* restrict alchemlyb to <0.5.0 for Python 2 (otherwise the installation fails
  due to an unsatisfiable pandas dependency) (#180)
* fix failure of mdpow-solvation script "AttributeError: 'AttributeDict' object
  has no attribute 'Gibbs'" (#180)
* fix fep.p_transfer() only analyzing the second input Gsolv (would lead to an
  error like "results.DeltaA does not contain 'Gibbs'") (PR #185)
* ensure that pickle files created under Python 2 are also readable under
  Python 3
* documentation fixes (PR #176)


2021-08-02    0.7.0
orbeckst, VOD555, ALescoulie

Changes

* renamed package to MDPOW
* support Python 3.7 -- 3.9 on Linux and macOS (#84)
* tested with GROMACS 4.6.5, 2018.6, 2020.6, 2021.1 (PR #159, #164)
* removed all generated docs from package
* config parser MERGES user runinput.yml with the package defaults
  (#8)
* Configuration setting mdrun.maxthreads now also applies to energy
  minimization with mdpow-equilibrium.py/mdpow.run() (#119)
* Default plot option is now "none" for the mdpow-* scripts (PR #142)
* Default estimator for mdpow analysis scripts is now alchemlyb MBAR
  (#139, PR #142)
* mdpow analysis scripts now default to statistical inefficiency